Revise CV title, content, and styles
Updated CV details and improved styling.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>Farhan Shakeel - CV</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        h1 { color: #333; }
-        section { margin-bottom: 15px; }
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .section ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        .section ul li {
+            margin-bottom: 8px;
+        }
     </style>
 </head>
 <body>
-    <h1>John Doe</h1>
-    <p>Email: john.doe@example.com | Phone: 555-123-4567</p>
+    <h1>Farhan Shakeel</h1>
+
+    <div class="section">
+        <h2>Education</h2>
+        <ul>
+            <li><strong>UET Lahore</strong> – BSc in Computer Science (2024-2028)</li>
+            <li><strong>FSc:</strong> 81%</li>
+            <li><strong>Matric:</strong> 99.27%</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Entry Test</h2>
+        <ul>
+            <li><strong>ECAT:</strong> 73%</li>
+        </ul>
+    </div>
+</body>
+</html>
+
 
